# optimization-testing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SIMD from theory to practice.odp  geometry_benchmark.ods  string_to_int_benchmark.ods
ObjectOpt/: CMakeLists.txt  main.cpp  main.s
SIMD/: CMakeLists.txt  main.cpp
SoA/: CMakeLists.txt  Summary.ods  main.cpp
SoA/glm/glm/gtx/: associated_min_max.inl
bitop/: CMakeLists.txt  main.cpp
code_test/: CMakeLists.txt  bench_out  caseone.cpp  caseone.h  main.cpp
concepts/: CMakeLists.txt  concept_idioms.cpp  concept_idioms.h  main.cpp  virtual.cpp  virtual.h
devirtualize/: CMakeLists.txt  callable.cpp  callable.h  main.cpp  test1.cpp  test1.h  test2.cpp  test2.h  virtual.h
geometry/: CMakeLists.txt  bench_out  common.h  main.cpp  node1.cpp  node1.h  node2.cpp  node2.h  node3.cpp  node3.h  node4.cpp  node4.h  node5.cpp  node5.h  node6.cpp  node6.h
standard_containers/: CMakeLists.txt  data.ods  record_all  run_all
standard_containers/common/: CMakeLists.txt  common_types.h
standard_containers/test1/: CMakeLists.txt  main.cpp  maker.cpp  maker.h  mapped_data.cpp  mapped_data.h  trade.h
standard_containers/test2/: CMakeLists.txt  mapped_data.cpp  mapped_data.h  quote.h  trade.cpp
standard_containers/test3/: CMakeLists.txt  main.cpp  mapped_data.cpp  quote.cpp
standard_containers/test4/: CMakeLists.txt  dealcode.cpp  main.cpp  mapped_data.cpp  mapped_data.h  order.cpp  order.h  quote.cpp  quote.h  trade.h
standard_containers/test5/: CMakeLists.txt  currency_pair.cpp  currency_pair.h  main.cpp  maker.h  mapped_data.cpp  mapped_data.h  order.cpp  quote.cpp  quote.h
standard_containers/test6/: CMakeLists.txt  main.cpp  maker.cpp  mapped_data.cpp  mapped_data.h  order.h  quote.cpp  quote.h  trade.cpp  trade.h
standard_containers/test7/: CMakeLists.txt  dealcode.h  hash.cpp  hash.h  main.cpp  maker.cpp  maker.h  mapped_data.cpp  mapped_data.h  order.cpp  order.h  quote.cpp  quote.h
std/: CMakeLists.txt  main.cpp
string_to_int/: CMakeLists.txt  main.cpp
